--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
         <link rel='stylesheet' href='stylesheets/style.css'/>
 
     </head>
-    <body class="container">
+    <body>
 
-        <h1>Fact or Fantasy Football Podcast</h1>
+        <div class="container">
+
+            <h1>Fact or Fantasy Football Podcast</h1>
+
+        </div>
 
     </body>
 </html>
