--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 
         </div>
 
+        <script type='text/javascript' src='bower_components/angular/angular.min.js'></script>
+        <script type='text/javascript' src='js/app.js'></script>
+        <script type='text/javascript' src='js/controllers/MainController.js'></script>
+
     </body>
 </html>
