update to angular

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
         <title>Fact or Fantasy Football Podcast</title>
         <link rel='stylesheet' href='stylesheets/style.css'/>
 
-    </head>
-    <body>
-
-        <div class="container">
-
-            <h1>Fact or Fantasy Football Podcast</h1>
-
-        </div>
-
         <script type='text/javascript' src='bower_components/angular/angular.min.js'></script>
+        <script type='text/javascript' src='bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
         <script type='text/javascript' src='js/app.js'></script>
         <script type='text/javascript' src='js/controllers/MainController.js'></script>
+
+    </head>
+    <body ng-app="app">
+
+        <div class="page-header">
+            <h1>Fact or Fantasy Football Podcast</h1>
+        </div>
+
+        <div ui-view></div>
+
+
 
     </body>
 </html>
