--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
         <title>Fact or Fantasy Football Podcast</title>
         <link rel='stylesheet' href='stylesheets/style.css'/>
 
-        <script type='text/javascript' src='bower_components/angular/angular.min.js'></script>
-        <script type='text/javascript' src='bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
-        <script type='text/javascript' src='js/app.js'></script>
-        <script type='text/javascript' src='js/controllers/MainController.js'></script>
 
     </head>
     <body ng-app="app">
 
-        <div class="page-header">
+        <header class="page-header">
             <h1>Fact or Fantasy Football Podcast</h1>
-        </div>
+        </header>
 
         <div ui-view></div>
 
+        <footer class="page-footer">
+            <p>All content created by Brent Young and Jon Doyen in conjunction with the <strong>Fact or Fantast Football Podcast</strong></p>
+            <p>Logo design by Dustin Young</p>
+            <p>Music for the podcast created and produced by Dustin Young and Ryan White</p>
+        </footer>
 
+        <script type='text/javascript' src='bower_components/angular/angular.min.js'></script>
+        <script type='text/javascript' src='bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
+        <script type='text/javascript' src='bower_components/jquery/dist/jquery.min.js'></script>
+        <script type='text/javascript' src='js/app.js'></script>
+        <script type='text/javascript' src='js/controllers/MainController.js'></script>
 
     </body>
 </html>
