--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Fact or Fantasy Football Podcast</title>
         <link rel='stylesheet' href='stylesheets/style.css'/>
+        <link rel='stylesheet' href='stylesheets/teams/teams.css'/>
         <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
 
 
@@ -27,6 +28,7 @@
         <script type='text/javascript' src='bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
         <script type='text/javascript' src='js/app.js'></script>
         <script type='text/javascript' src='js/controllers/MainController.js'></script>
+        <script type='text/javascript' src='js/controllers/TeamController.js'></script>
 
     </body>
 </html>
