--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body ng-app="app" ng-controller="MainController">
 
         <header class="page-header">
-            <div class="page-flow-item wrapper"><a href="likes">Likes / Dislikes</a></div>
+            <div class="page-flow-item wrapper disable"><a href="likes">Likes / Dislikes</a></div>
             <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div>
             <div class="page-flow-item wrapper" ng-click="goToUrl('nfl ranks')">NFL.com Rankings</div>
         </header>
