--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
     <body ng-app="app" ng-controller="MainController">
 
+        <div class="background"></div>
+
         <header class="page-header">
             <div class="page-flow-item wrapper disable"><a href="likes">Likes / Dislikes</a></div>
             <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div>
