--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="page-flow-item wrapper" href="#/likes">Likes / Dislikes</a>
             <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div>
             <div class="page-flow-item wrapper" ng-click="goToUrl('nfl ranks')">NFL.com Rankings</div>
-            <a class="page-flow-item wrapper" href="http://foffpod.libsyn.com/podcast">Downloads</a>
+            <a class="page-flow-item wrapper" href="http://foffpod.libsyn.com/podcast">Official RSS Page</a>
         </header>
 
         <!-- <div class="download-link"><a href="http://foffpod.libsyn.com/podcast">Download our Latest Episode!</a></div> -->
@@ -33,6 +33,8 @@
                 <span class="social-item">Email: FactOrFantasyPod@gmail.com</span>
                 <span class="social-item fa fa-twitter-square" ng-click="goToTwitter('Brent')" aria-hidden="true">Brent</span>
                 <span class="social-item fa fa-twitter-square" ng-click="goToTwitter('Jon')" aria-hidden="true">Jon</span>
+                <span><a class="social-item" href="https://itunes.apple.com/us/podcast/fact-or-fantasy-football-podcast/id1167857671">iTunes</a></span>
+                <span><a class="social-item" href="http://stitcher.com/s?fid=122400&refid=stpr">Stitcher</a></span>
             </div>
 
 
