--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <span class="social-item">Email: FactOrFantasyPod@gmail.com</span>
                 <span class="social-item fa fa-twitter-square" ng-click="goToTwitter('Brent')" aria-hidden="true">Brent</span>
                 <span class="social-item fa fa-twitter-square" ng-click="goToTwitter('Jon')" aria-hidden="true">Jon</span>
+                <span class="social-item fa fa-twitter-square" ng-click="goToTwitter('David')" aria-hidden="true">David</span>
                 <span><a class="social-item" href="https://itunes.apple.com/us/podcast/fact-or-fantasy-football-podcast/id1167857671">iTunes</a></span>
                 <span><a class="social-item" href="http://stitcher.com/s?fid=122400&refid=stpr">Stitcher</a></span>
             </div>
