disable likes button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header class="page-header">
             <a class="page-flow-item wrapper" href="#/team">Home</a>
-            <a class="page-flow-item wrapper" href="#/likes">Likes / Dislikes</a>
+            <a class="page-flow-item wrapper disable" href="#/likes">Likes / Dislikes</a>
             <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div>
             <div class="page-flow-item wrapper" ng-click="goToUrl('nfl ranks')">NFL.com Rankings</div>
             <a class="page-flow-item wrapper" href="http://foffpod.libsyn.com/podcast">Official RSS Page</a>
