--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel='stylesheet' href='stylesheets/style.css'/>
         <link rel='stylesheet' href='stylesheets/teams/teams.css'/>
         <link rel='stylesheet' href='stylesheets/likes.css'/>
+        <link rel='stylesheet' href='stylesheets/brackets.css'/>
         <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
 
 
@@ -14,10 +15,10 @@
         <div class="background"></div>
 
         <header class="page-header">
-            <a class="page-flow-item wrapper" href="#/team">Home</a>
-            <a class="page-flow-item wrapper" href="#/likes">Likes / Dislikes</a>
-            <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div>
-            <div class="page-flow-item wrapper" ng-click="goToUrl('nfl ranks')">NFL.com Rankings</div>
+            <!-- <a class="page-flow-item wrapper" href="#/team">Home</a> -->
+            <!-- <a class="page-flow-item wrapper" href="#/likes">Likes / Dislikes</a> -->
+            <!-- <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div> -->
+            <!-- <div class="page-flow-item wrapper" ng-click="goToUrl('nfl ranks')">NFL.com Rankings</div> -->
             <a class="page-flow-item wrapper" href="http://foffpod.libsyn.com/podcast">Official RSS Page</a>
         </header>
 
@@ -53,6 +54,7 @@
         <script type='text/javascript' src='bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
         <script type='text/javascript' src='js/app.js'></script>
         <script type='text/javascript' src='js/controllers/MainController.js'></script>
+        <script type='text/javascript' src='js/controllers/BracketController.js'></script>
         <script type='text/javascript' src='js/controllers/TeamController.js'></script>
         <script type='text/javascript' src='js/controllers/LikesController.js'></script>
 
