--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel='stylesheet' href='stylesheets/teams/teams.css'/>
         <link rel='stylesheet' href='stylesheets/likes.css'/>
         <link rel='stylesheet' href='stylesheets/brackets.css'/>
+        <link rel='stylesheet' href='stylesheets/super.css'/>
         <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
 
 
@@ -57,6 +58,7 @@
         <script type='text/javascript' src='js/controllers/BracketController.js'></script>
         <script type='text/javascript' src='js/controllers/TeamController.js'></script>
         <script type='text/javascript' src='js/controllers/LikesController.js'></script>
+        <script type='text/javascript' src='js/controllers/SuperController.js'></script>
 
     </body>
 </html>
